header reformat - remove extra whitespaces added by global replace